--- a/src/patient/pages/booking/style.css
+++ b/src/patient/pages/booking/style.css
@@ -145,27 +145,46 @@ label {
 } 
 
 .lich {
-    /* border: 1px solid darkgoldenrod; */
-    max-height: 200px;
-    overflow-y: auto;
-    /* scroll-margin-right: 10px; */
+    /* height: 200px; */
 }
 .time-step {
-    background-color: #e9e9e9;
+    /* background-color: #e9e9e9; */
     border:1px solid #e9e9e9;
-    color: #757575;
+    /* color: #757575; */
     font-size: 14px;
-    padding: 6px 15px;
+    padding: 10px 15px;
     text-align: center;
     margin: 8px;
+    width: 100%;
 }
-.time-step:hover {
-    /* color: #757575; */
-    box-shadow: #1890ff;
-    /* background-color: red; */
+.time-step .radio-group {
+    width: 100%;
+    height:100%;
 }
-.chooseDay .ant-select-selector {
-    border: none !important;
-    border-bottom: 1px solid #000 !important;
-    margin-bottom: 30px;
+.time-step .ant-radio-group-outline {
+    display: block !important;
+    overflow-x: visible;
+    white-space: normal;
+    padding-bottom: 10px;
+    width: 100%;
+    text-align: initial;
 }
+.time-step .ant-radio-button-wrapper {
+    background-color: #e9e9e9;
+    height: 40px !important;
+    width: auto !important;
+    line-height: 40px !important;
+    padding-top: 0 !important;
+    padding-bottom: 0 !important;
+    padding-left: 15px !important;
+    padding-right: 15px !important;
+    font-size: 14px !important;
+    margin-right: 10px !important;
+}
+.time-step .radio-group .radio-button {
+    /* padding: 10px 15px; */
+    margin-top:3px;
+    margin-bottom: 3px;
+}
+
+
