--- a/src/patient/pages/login/style.css
+++ b/src/patient/pages/login/style.css
@@ -8,6 +8,7 @@
     font-size: 30px;
     padding-top: 20px;
     padding-bottom: 25px;
+    margin-bottom: 30px;
 }
 .login-barner {
     width: 100%;
@@ -41,10 +42,17 @@
     text-align: center;
     padding-bottom: 40px;
 }
+.login-form {
+    display: flex;
+    flex-direction:column;
+    align-items: center;
+    margin-bottom: 30px !important;
+}
 .login-form-button {
-    width: 100%;
-    height: 45px !important;
+    width: 80% !important;
+    height: 50px !important;
     font-size: 20px !important;
+    font-weight: 700;
 }
 .number_confirm {
     height: 50px !important;
@@ -52,4 +60,12 @@
 .directer_page {
     text-align: center;
     padding-bottom: 15px;
+}
+.directer_page .link_directer {
+    font-weight: 700;
+    font-size: 13px;
+    color: #0096d4
+}
+.directer_page .link_directer:hover {
+    text-decoration: underline;
 }
