--- a/src/patient/components/footer/style.css
+++ b/src/patient/components/footer/style.css
@@ -2,3 +2,12 @@
     width: 100%;
     height: 100%;
 }
+
+/*  */
+.patient_footer {
+    height: 400px;
+}
+.footer-logo {
+    width: 100%;
+    height: 100%;
+}
