--- a/src/patient/assets/css/style.css
+++ b/src/patient/assets/css/style.css
@@ -2263,7 +2263,7 @@ html.menu-opened body {
 /* background: #f9f9f9 url("../images/search-bg.png") no-repeat bottom center; */
 	background: #f9f9f9 url("../img/bc_home.jpg");
     min-height: 550px;
-    background-size: 100% auto;
+    background-size: cover;
     position: relative;
     background-blend-mode: Darken;
     padding: 80px 0;
