--- a/src/patient/features/home/advertisement/style.css
+++ b/src/patient/features/home/advertisement/style.css
@@ -35,6 +35,7 @@
     padding: 20px;
     border:1px solid #ccc;
     text-align: center;
+    margin-bottom: 20px;
 }
 .chooseItem .chooseLogo span {
     font-size: 80px;
